--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "export": "next export",
     "start": "next start",
     "lint": "next lint",
+    "serve": "serve ./out",
     "prettier": "prettier --write ."
   },
   "dependencies": {
@@ -39,6 +40,7 @@
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "serve": "^13.0.2"
   }
 }
