--- a/package.json
+++ b/package.json
@@ -17,30 +17,30 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^12.1.1",
+    "@next/bundle-analyzer": "^12.1.6",
     "@tailwindcss/typography": "^0.5.2",
     "add": "^2.0.6",
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.7",
     "clsx": "^1.1.1",
     "js-yaml": "^4.1.0",
-    "next": "^12.1.1",
-    "next-themes": "^0.1.1",
-    "postcss": "^8.4.12",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^12.1.6",
+    "next-themes": "^0.2.0",
+    "postcss": "^8.4.14",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-ionicons": "^4.2.0",
     "remark-parse": "^10.0.1",
     "styled-components": "^5.3.5",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.1.3",
     "unified": "^10.1.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "cross-env": "^7.0.3",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.1",
+    "eslint": "^8.18.0",
+    "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.6.1",
+    "prettier": "^2.7.1",
     "serve": "^13.0.2"
   }
 }
