--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,6 +5,7 @@
   "semi": true,
   "bracketSameLine": true,
 
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "importOrder": ["^[^.]", "^[./].*(?<!\\.css)$", "^[./].*\\.(css)$"],
   "importOrderSeparation": true,
   "importOrderParserPlugins": ["jsx"]
