--- a/package.json
+++ b/package.json
@@ -42,5 +42,11 @@
     "eslint-config-prettier": "^8.6.0",
     "prettier": "^2.8.4",
     "serve": "^14.2.0"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "pnpm": ">=7.13.0",
+    "yarn": "please-use-pnpm",
+    "npm": "please-use-pnpm"
   }
 }
