--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,6 +4,7 @@
   "printWidth": 120,
   "semi": true,
   "bracketSameLine": true,
+  "trailingComma": "es5",
 
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "importOrder": ["^[^.]", "^[./].*(?<!\\.css)$", "^[./].*\\.(css)$"],
