--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "add": "^2.0.6",
     "autoprefixer": "^10.4.15",
     "clsx": "^2.0.0",
-    "js-yaml": "^4.1.0",
     "next": "^13.4.19",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.29",
@@ -40,6 +39,7 @@
     "eslint": "^8.48.0",
     "eslint-config-next": "^13.4.19",
     "eslint-config-prettier": "^9.0.0",
+    "gray-matter": "^4.0.3",
     "prettier": "^3.0.3",
     "serve": "^14.2.1"
   },
