--- a/package.json
+++ b/package.json
@@ -17,31 +17,34 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^14.2.22",
     "@tailwindcss/typography": "^0.5.15",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
-    "next": "^14.2.22",
-    "next-themes": "^0.3.0",
+    "next": "^15.1.3",
+    "next-themes": "^0.4.4",
     "postcss": "^8.4.49",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-ionicons": "^4.2.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "remark-parse": "^11.0.0",
     "styled-components": "^6.1.13",
     "tailwindcss": "^3.4.17",
     "unified": "^11.0.5"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@iconify-json/ion": "^1.2.2",
+    "@next/bundle-analyzer": "^15.1.3",
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.22",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
     "eslint-config-prettier": "^9.1.0",
     "gray-matter": "^4.0.3",
     "prettier": "^3.4.2",
-    "serve": "^14.2.4"
+    "serve": "^14.2.4",
+    "unplugin-icons": "^0.22.0"
   },
   "engines": {
     "node": ">=20.0.0",
