Replaced piwik with plausible

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_PIWIK_DOMAIN=analytics.cogindo.net
-NEXT_PUBLIC_PIWIK_SITE_ID=
+NEXT_PUBLIC_PLAUSIBLE_DOMAIN=fkrauthan.ca
+NEXT_PUBLIC_PLAUSIBLE_HOST=https://stats.cogindo.net
+NEXT_PUBLIC_PLAUSIBLE_ENABLED=0
