--- a/package.json
+++ b/package.json
@@ -19,32 +19,33 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "add": "^2.0.6",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
-    "next": "^15.1.6",
-    "next-themes": "^0.4.4",
-    "postcss": "^8.5.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.3.2",
+    "next-plausible": "^3.12.4",
+    "next-themes": "^0.4.6",
+    "postcss": "^8.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "remark-parse": "^11.0.0",
-    "styled-components": "^6.1.14",
+    "styled-components": "^6.1.17",
     "tailwindcss": "^3.4.17",
     "unified": "^11.0.5"
   },
   "devDependencies": {
-    "@iconify-json/ion": "^1.2.2",
-    "@next/bundle-analyzer": "^15.1.6",
+    "@iconify-json/ion": "^1.2.3",
+    "@next/bundle-analyzer": "^15.3.2",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "cross-env": "^7.0.3",
-    "eslint": "^9.19.0",
-    "eslint-config-next": "^15.1.6",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "^15.3.2",
+    "eslint-config-prettier": "^10.1.2",
     "gray-matter": "^4.0.3",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "serve": "^14.2.4",
-    "unplugin-icons": "^22.0.0"
+    "unplugin-icons": "^22.1.0"
   },
   "engines": {
     "node": ">=20.0.0",
