--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_PLAUSIBLE_DOMAIN=fkrauthan.ca
-NEXT_PUBLIC_PLAUSIBLE_HOST=https://stats.cogindo.net
+NEXT_PUBLIC_PLAUSIBLE_HOST=https://t.cogindo.net
 NEXT_PUBLIC_PLAUSIBLE_ENABLED=0
