--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "NONE",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "analyze": "cross-env ANALYZE=true next build",
-    "export": "next export",
+    "export": "next export --webpack",
     "start": "next start",
     "lint": "next lint",
     "serve": "serve ./out",
@@ -21,12 +21,12 @@
     "add": "^2.0.6",
     "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
-    "next": "^15.5.7",
+    "next": "16.0.7",
     "next-plausible": "^3.12.5",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "remark-parse": "^11.0.0",
     "styled-components": "^6.1.19",
     "tailwindcss": "^3.4.18",
@@ -34,13 +34,13 @@
   },
   "devDependencies": {
     "@iconify-json/ion": "^1.2.6",
-    "@next/bundle-analyzer": "^15.5.7",
+    "@next/bundle-analyzer": "16.0.7",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "cross-env": "^10.1.0",
     "eslint": "^9.39.1",
-    "eslint-config-next": "^15.5.7",
+    "eslint-config-next": "16.0.7",
     "eslint-config-prettier": "^10.1.8",
     "gray-matter": "^4.0.3",
     "prettier": "^3.7.4",
