--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
     "pnpm": ">=10.0.0",
     "yarn": "please-use-pnpm",
     "npm": "please-use-pnpm"
-  }
+  },
+  "packageManager": "pnpm@10.24.0"
 }
