--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "next dev --webpack",
     "build": "next build --webpack",
+    "postbuild": "find out -type f \\( -name '*.html' -o -name '*.css' -o -name '*.js' -o -name '*.json' -o -name '*.svg' -o -name '*.jpg' \\) -exec gzip -9 -k {} \\; -exec brotli -9 -k {} \\;",
     "analyze": "cross-env ANALYZE=true next build",
     "export": "next export --webpack",
     "start": "next start",
@@ -19,7 +20,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
     "add": "^2.0.6",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
     "next": "16.0.7",
     "next-plausible": "^3.12.5",
@@ -28,8 +29,8 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "remark-parse": "^11.0.0",
-    "styled-components": "^6.1.19",
-    "tailwindcss": "^3.4.18",
+    "styled-components": "^6.2.0",
+    "tailwindcss": "^3.4.19",
     "unified": "^11.0.5"
   },
   "devDependencies": {
@@ -37,9 +38,9 @@
     "@next/bundle-analyzer": "16.0.7",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
-    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.2",
     "cross-env": "^10.1.0",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "eslint-config-next": "16.0.7",
     "eslint-config-prettier": "^10.1.8",
     "gray-matter": "^4.0.3",
